--- a/package.json
+++ b/package.json
@@ -1,33 +1,45 @@
 {
   "name": "sheer",
   "version": "0.0.1",
-  "scripts": {
+  "main":"src/main/_.js"
+  ,"scripts": {
     "dev": "npm run dev:all",
     "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
     "dev:vue": "vite",
-    "dev:ele": "electron src/main/main.js",
+    "dev:ele": "node script/build --env=development --watch",
     "build": "vuedx-typecheck . && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
     "vue": "^3.0.5",
-    "@types/js-yaml": "^3.12.5",
     "vue-router": "^4.0.0-beta.6",
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
     "@types/node": "^14.14.22",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
-    "concurrently": "^5.3.0",
-    "electron": "^11.2.1",
-    "electron-builder": "^22.9.1",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.50",
     "autoprefixer": "^10.2.4",
+    "chalk": "^4.1.0",
+    "concurrently": "^5.3.0",
+    "dotenv": "^8.2.0",
+    "dts-gen": "^0.6.0",
+    "electron": "^11.3.0",
+    "electron-builder": "^22.9.1",
+    "electron-connect": "^0.6.3",
+    "electron-is-dev": "^1.2.0",
+    "minimist": "^1.2.5",
+    "ora": "^5.3.0",
+    "postcss": "^8.2.4",
+    "sugar-electron": "^1.0.59",
     "tailwindcss": "^2.0.2",
-    "postcss": "^8.2.4"
+    "typescript": "^4.1.3",
+    "vite": "^2.0.3",
+    "wait-on": "^5.2.1"
   }
 }
