--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "sheer",
   "version": "0.0.1",
-  "main":"src/main/_.js"
-  ,"scripts": {
+  "main": "src/main/_.js",
+  "scripts": {
     "dev": "npm run dev:all",
     "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
     "dev:vue": "vite",
     "dev:ele": "node script/build --env=development --watch",
     "build": "vuedx-typecheck . && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.0.5",
@@ -19,6 +20,7 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
@@ -38,6 +40,7 @@
     "postcss": "^8.2.4",
     "sugar-electron": "^1.0.59",
     "tailwindcss": "^2.0.2",
+    "ts-jest": "^26.5.2",
     "typescript": "^4.1.3",
     "vite": "^2.0.3",
     "wait-on": "^5.2.1"
