--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsx": "preserve",
     "sourceMap": true,
     "lib": ["esnext", "dom"],
-    "types": ["vite/client","node"],
+    "types": ["vite/client","node","jest"],
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
     "baseUrl": "./",
     "strictNullChecks": true,
