--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-builder": "^22.9.1",
     "electron-connect": "^0.6.3",
     "electron-is-dev": "^1.2.0",
+    "jest": "^26.6.3",
     "minimist": "^1.2.5",
     "ora": "^5.3.0",
     "postcss": "^8.2.4",
