--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "npm run dev:all",
     "dev:all": "concurrently -n=vue,ele -c=green,blue \"npm run dev:vue\" \"npm run dev:ele\"",
     "dev:vue": "vite",
-    "dev:ele": "node script/build --env=development --watch",
+    "dev:ele": "vite build -c src/main/vite.config.ts && vite build -c src/render/nested-second/vite.config.ts && electron src/main/index.cjs.js ",
     "build": "vuedx-typecheck . && vite build",
     "serve": "vite preview",
     "test": "jest"
   },
   "dependencies": {
+    "chokidar": "^3.5.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.0-beta.6",
     "vuex": "^4.0.0-beta.4"
@@ -34,14 +35,18 @@
     "electron-builder": "^22.9.1",
     "electron-connect": "^0.6.3",
     "electron-is-dev": "^1.2.0",
+    "esm": "^3.2.25",
+    "esm-ts-node": "^1.0.7",
     "jest": "^26.6.3",
     "minimist": "^1.2.5",
     "ora": "^5.3.0",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
     "ts-jest": "^26.5.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "vite": "^2.0.3",
+    "vite": "^2.0.5",
+    "vite-plugin-commonjs-externals": "^0.1.0",
     "wait-on": "^5.2.1"
   }
 }
